feat(neuprint): retarget neo4j upgrade from 5.26.27 to 2026.06.0
Neo4j switched from SemVer to calendar versioning (YYYY.MM.Patch) at
2025.01, the first release after the 5.26 LTS checkpoint, so all of the
4.4 -> 5.x work on this branch still applies plus the changes below.
Verified that the neo4j:2026.06.0 docker tag and the
apoc-2026.06.0-core.jar release asset both exist.

Note that 2026.06 is NOT an LTS release: under CalVer each monthly
release is supported only until the next one ships, whereas 5.26 LTS is
supported until June 2028.

Version bumps:
- docker image neo4j:5.26.27 -> neo4j:2026.06.0 (ingest + inspect)
- APOC jar 5.26.27-core.jar -> 2026.06.0-core.jar

neo4j.conf:
- remove db.tx_state.memory_allocation, removed without replacement in
  2025.01
- remove -XX:-UseBiasedLocking. 2025.01+ requires Java 21, where biased
  locking no longer exists; the flag is at best ignored with an
  obsolete-option warning and at worst rejected as an unrecognized VM
  option, preventing the JVM from starting
- pin db.query.default_language=CYPHER_5. Cypher is versioned
  separately from the server as of 2025.06, and from 2026.02 the
  distributed neo4j.conf sets CYPHER_25. Since we replace neo4j.conf
  wholesale we would otherwise silently inherit the built-in default;
  pinning stops the language version shifting on a future bump.
  create-indexes.cypher is Cypher 5 syntax.

Ingestion script:
- pass --bad-tolerance explicitly. 2025.12 changed the default from
  1000 to -1 (unlimited), which would skip and log malformed CSV rows
  instead of failing the import -- silent row loss in a connectome
  export. Defaults to the pre-CalVer 1000, overridable via
  BAD_TOLERANCE; 0 fails on the first bad record.
- replace `python -c multiprocessing.cpu_count()` with nproc. The
  neo4j:5+ container images do not ship python, so this died with
  "python: command not found". Clamped to a minimum of 1 because
  --threads=0 is invalid.
- make HEAP_SIZE and MAX_MEMORY overridable, and 